--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,38 @@
+/* NAVBAR */
+
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.methods {
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  li {
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
+}
+
+/* */
+
 body {
   font-family: 'Arial', sans-serif;
   margin: 0;
