--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,67 @@
 /* NAVBAR */
 
-
 .navbar {
   position: fixed;
   top: 0;
   left: 0;
-  width: 200px;
+  width: 250px;
   height: 100%;
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  background-color: #fff; /* White background */
+  color: #333; /* Text color */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow-y: auto; /* Enable scrolling if content exceeds height */
 }
 
-.header {
-  text-align: center;
-  margin-bottom: 20px;
+.header h1 {
+  margin: 0;
+  font-size: 24px;
+  padding: 20px;
+  background-color: #3498db; /* Header background color */
+  color: #fff; /* Header text color */
 }
 
 .methods {
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    margin-bottom: 10px;
-    cursor: pointer;
-  }
+  margin-top: 20px;
+  padding: 20px;
 }
+
+.methods h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.methods ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.methods a {
+  text-decoration: none;
+  color: #333;
+  font-size: 16px;
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  display: block;
+}
+
+.methods a:hover {
+  background-color: #ecf0f1; /* Dimming effect on hover */
+  color: #3498db; /* Hover color */
+}
+
+
+
 
 /* */
 
 body {
   font-family: 'Arial', sans-serif;
-  margin: 0;
+  margin: 0 0 0 250px;
   padding: 0;
   background-color: #f0f0f0;
 }
