--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,6 @@
 }
 
 
-
-
 /* */
 
 body {
@@ -73,8 +71,8 @@ body {
 .calc-app{
   display: flex;
   align-items: center;
-  justify-content: center;
-  max-width: 30%;
+  justify-content: space-evenly;
+  max-width: 800px;
   margin: 30px 0 0;
 }
 
@@ -93,6 +91,8 @@ body {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 300px;
+  max-height: 400px;
 }
 
 .screen {
@@ -140,6 +140,11 @@ button {
 
 .variables {
   margin-top: 20px;
+}
+
+.objasnjenje{
+  padding: 50px;
+  width: 400px;
 }
 
 /* METODE */
