--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,10 @@ body {
 
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
 }
 
 .calc-app{
@@ -73,7 +77,6 @@ body {
   align-items: center;
   justify-content: space-evenly;
   max-width: 800px;
-  margin: 30px 0 0;
 }
 
 .App-header{
@@ -92,7 +95,7 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 300px;
-  max-height: 400px;
+  max-height: 390px;
 }
 
 .screen {
@@ -161,10 +164,10 @@ button {
 .form-section {
   background-color: #fff;
   padding: 20px;
-  margin: 20px 30px 0;
+  margin: 20px 0 0;
   border-radius: 8px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  width: 400px;
+  width: 200px;
 }
 
 .form-item {
@@ -205,6 +208,7 @@ button {
 .results-section {
   text-align: center;
   margin: 20px 30px 0;
+  width: 600px;
 }
 
 .results-table {
@@ -251,3 +255,13 @@ button {
   color: #555;
 }
 
+.all-results{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#graph{
+  display: flex;
+  flex-direction: column;
+}
