--- a/src/App.css
+++ b/src/App.css
@@ -215,6 +215,7 @@ button {
   border-radius: 8px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   width: 200px;
+  margin-right: 30px;
 }
 
 .form-item {
