--- a/src/index.css
+++ b/src/index.css
@@ -416,4 +416,32 @@ button {
     margin-bottom: 50px;
   }
 
+  .dropdown{
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .dropdown-menu{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1000;
+    background-color: #f0f0f0;
+  }
+  
+  .navbar{
+    background-color: #f0f0f0;
+    position: absolute;
+    top: 0;
+    z-index: 999;
+    height: calc(100vh - 10px);
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    right: 0;
+  }
+
 }
